--- a/Sections/08_Introduction.Rmd
+++ b/Sections/08_Introduction.Rmd
@@ -46,18 +46,47 @@ Still, the 850k array covers \~850,000 CpG sites which is \~3% of all CpGs in th
 
 ## Placental DNA methylation variation across human populations
 
-Epigenome-wide association studies (EWAS) have shown that a substantial amount of variation in DNA methylation (DNAm) exists between human populations [@chu2017; @smith2017; @park2018; @adkins2011; @kwabi-addo2010; @liu2010; @fraser2012]. Therefore, if left unaccounted for, population-associated variation can interfere with the discovery of DNAm alterations associated with disease or environment. This type of confounding, often referred to as population stratification, can be addressed by inferring population-associated variation directly from DNAm data itself [@barfield2014; @rahmani2017; @zhou2017], as is done in genome-wide association studies (GWAS) [@tian2008].
+Epigenome-wide association studies (EWAS) have shown that a substantial amount of variation in DNA methylation (DNAm) exists between human populations [@chu2017; @smith2017; @park2018; @adkins2011; @kwabi-addo2010; @liu2010; @fraser2012].
+Therefore, if left unaccounted for, population-associated variation can interfere with the discovery of DNAm alterations associated with disease or environment.
+This type of confounding, often referred to as population stratification, can be addressed by inferring population-associated variation directly from DNAm data itself [@barfield2014; @rahmani2017; @zhou2017], as is done in genome-wide association studies (GWAS) [@tian2008].
 However, unlike genetic markers, epigenetic markers are tissue-specific, and therefore a DNAm-based method developed in a specific tissue or population may not generalize well to other tissues with unique DNAm profiles, such as the placenta.
 
 In EWAS, confounding from population stratification is most often addressed using self-reported ethnicity/race to stratify study samples across the phenotype of interest.
-But, defining ethnicity/race is a complex task requiring the interpretation of a combination of biological and social factors leading to several complications: (i) inconsistent definition of ethnicity/race categories between individuals/organizations [@sankar2007; @mersha2015]; (ii) self-reporting more than one ethnicity/race [@kaneshiro2011]; and (iii) missing ethnicity information altogether. To overcome the limitations of ethnicity/race categories, genetically-defined ancestry can be used [@banda2015] as an alternative measure of population-specific variation. In contrast to the discrete nature of ethnicity/race categories, genetic ancestry can be expressed as several continuous variables that reflect ancestry composition [@pritchard1999].
+But, defining ethnicity/race is a complex task requiring the interpretation of a combination of biological and social factors leading to several complications: (i) inconsistent definition of ethnicity/race categories between individuals/organizations [@sankar2007; @mersha2015]; (ii) self-reporting more than one ethnicity/race [@kaneshiro2011]; and (iii) missing ethnicity information altogether.
+To overcome the limitations of ethnicity/race categories, genetically-defined ancestry can be used [@banda2015] as an alternative measure of population-specific variation.
+In contrast to the discrete nature of ethnicity/race categories, genetic ancestry can be expressed as several continuous variables that reflect ancestry composition [@pritchard1999].
 
 ### Existing approaches to account for population variation in EWAS
 
 Although the importance of accounting for human population-based variation in EWAS is widely acknowledged, methods for DNAm- specific analysis are underdeveloped.
-Barfield 2014 developed a principal components analysis (PCA) -based approach to summarize genetic variation in PC variables that can be later incorporated into downstream analyses [@barfield2014]. This approach, which is highly similar and likely inspired from genotype -based methods of assessing genetic ancestry that are routinely used GWAS [@price2006a], was effective in a population of North American Caucasian and African American peripheral blood samples. In contrast to genotype -based genetic ancestry, population -specific signal in DNAm data is not nearly as strong; therefore, Barfield 2014 found improvements by using PCA on CpG sites that are nearby (\<50bp) single nucleotide polymorphisms (SNPs), which are where the DNA sequence at a particular genomic position often varies between individuals, and in this case, human populations. Rahmani 2017 developed an approach they refer to as EPISTRUCTURE, which is also a PCA-based approach using a subset of CpGs. In contrast to Barfield 2014's "proximity-based" approach, EPISTRUCTURE uses CpG sites that were directly associated with a nearby SNP. These CpG-SNP associations, which are often referred to as methylation quantitative trait loci (mQTLs), were identified in one of the two cohorts included in Rahmani 2017. Although EPISTRUCTURE was shown to have obvious improvements in isolating population-specific in their DNAm data, a limitation of this type of approach is that a general feature of mQTLs is that many can be highly tissue-specific [@delahaye2018; @bell2011; @fraser2012], and moreover SNPs can also be highly population-specific [@gibbs2015]. Since EPISTRUCTURE was developed in blood and in Caucasians, it remains unclear if EPISTRUCTURE can provide reasonable performance in other tissues and populations. In contrast to Barfield 2014 and EPISTRUCTURE, Zhou 2017 developed an entirely genotype-based approach by training a random forest predictor of ethnicity, using the 59-65 SNP probes on the 450k and 850k DNAm microarrays [@zhou2017b].
-They show that for at least 3 broad ethnicities, Caucasians, African (Americans), and Asian (Americans), their SNP predictor performs well.
-However, it these SNP probes were designed for population-specific analyses in mind, and because of the small number of probes, it is unclear how robust and sensitive to additional populations Zhou 2017's SNP predictor.
+Barfield 2014 developed a principal components analysis (PCA) -based approach to summarize genetic variation in PC variables that can be later incorporated into downstream analyses [@barfield2014] (Table \@ref(tab:ch3tab1)). This approach, which is highly similar and likely inspired from genotype -based methods of assessing genetic ancestry that are routinely used GWAS [@price2006a], was effective in a population of North American Caucasian and African American peripheral blood samples. In contrast to genotype -based genetic ancestry, population -specific signal in DNAm data is not nearly as strong; therefore, Barfield 2014 found improvements by using PCA on CpG sites that are nearby (\<50bp) single nucleotide polymorphisms (SNPs), which are where the DNA sequence at a particular genomic position often varies between individuals, and in this case, human populations. Rahmani 2017 developed an approach they refer to as EPISTRUCTURE, which is also a PCA-based approach using a subset of CpGs. In contrast to Barfield 2014's "proximity-based" approach, EPISTRUCTURE uses CpG sites that were directly associated with a nearby SNP. These CpG-SNP associations, which are often referred to as methylation quantitative trait loci (mQTLs), were identified in one of the two cohorts included in Rahmani 2017. Although EPISTRUCTURE was shown to have obvious improvements in isolating population-specific in their DNAm data, a limitation of this type of approach is that a general feature of mQTLs is that many can be highly tissue-specific [@delahaye2018; @bell2011; @fraser2012], and moreover SNPs can also be highly population-specific [@gibbs2015]. Since EPISTRUCTURE was developed in blood and in Caucasians, it remains unclear if EPISTRUCTURE can provide reasonable performance in other tissues and populations. In contrast to Barfield 2014 and EPISTRUCTURE, Zhou 2017 developed an entirely genotype-based approach by training a random forest predictor of ethnicity, using the 59-65 SNP probes on the 450k and 850k DNAm microarrays [@zhou2017b]. They show that for at least 3 broad ethnicities, Caucasians, African (Americans), and Asian (Americans), their SNP predictor performs well. However, it these SNP probes were designed for population-specific analyses in mind, and because of the small number of probes, it is unclear how robust and sensitive to additional populations Zhou 2017's SNP predictor.
+
+<!--- table on methods to account for population stratification in EWAS -->
+(ref:ch2tab1m1) Barfield et al. 2014 [@barfield2014]
+
+(ref:ch2tab1m2) EPI-STRUCTURE [@rahmani2017]
+
+(ref:ch2tab1m3) Zhou et al. 2017 [@zhou2017]
+
+(ref:ch2tab1m4) PlaNET [@yuan2019]
+
+\captionsetup{width=6.5in}
+
+```{r ch2tab1, eval = T, echo = T, echo=FALSE, warning = FALSE, message=FALSE,  out.extra=''}
+kableExtra::kbl(
+  readr::read_csv(here::here('Tables', 'ch2table1.csv')) %>%
+    select(-`Name of method`) %>%
+    mutate(method = c('(ref:ch2tab1m1)',
+                      '(ref:ch2tab1m2)', 
+                      '(ref:ch2tab1m3)',
+                      '(ref:ch2tab1m4)')) %>%
+    select(method, everything()),
+  booktabs = TRUE,
+  caption = 'Description of methods to infer self-reported ethnicity or genetic ancestry using HM450K data.') %>%
+  kableExtra::kable_styling(full_width = TRUE) %>%
+  kableExtra::add_header_above(c(" " = 4, "Sample Characteristics " = 3)) %>%
+  kableExtra::footnote(symbol = 'Ethnicity/ancestry as defined in associated study')
+```
 
 ## Epigenetics and placenta cell types
 
@@ -108,7 +137,12 @@ However, the effectiveness of reference-free deconvolution in capturing cell com
 
 ## Maternal signal in placental DNA methylation data
 
-Illumina high-density microarray profiling for DNAm has advanced placental research by identifying epigenetic processes associated with placental function in relation to maternal environment, genetics, and perinatal health [@konwar2019]. Critical to these studies is the development of bioinformatic tools to process and analyze DNAm data. Recently, sample contamination, which can result in obscured measurements, has been shown to be prevalent in EWAS data [@heiss2018]. Sex mismatches and, more in general, misannotation of samples is a problem that has been previously demonstrated in other types of genomic studies [@turco2019]. Heiss and Just 2018 used two bioinformatic approaches to determine whether samples measured on the Illumina 450k and EPIC DNAm microarrays are contaminated or misannotated. The first approach estimates the amount of mixing of distinct genotypes in a DNAm array sample, by measuring the amount of outlying signal at 59-65 SNP probes, which increases as mixing between genetically distinct individuals occur. The second approach identifies samples that have a pattern of signal intensity on the X and Y chromosome probes that is consistent with mixing of samples of different sex. This second approach is only sensitive to those cases where the sexes of the mixed samples are distinct. Despite most EWAS having some level of data quality control and sample preprocessing, Heiss and Just 2018 demonstrate that misannotation and sample contamination is relatively common in DNAm studies, but also importantly note that contamination is identifiable by their approaches and therefore addressable in downstream analysis.
+Illumina high-density microarray profiling for DNAm has advanced placental research by identifying epigenetic processes associated with placental function in relation to maternal environment, genetics, and perinatal health [@konwar2019]. Critical to these studies is the development of bioinformatic tools to process and analyze DNAm data. Recently, sample contamination, which can result in obscured measurements, has been shown to be prevalent in EWAS data [@heiss2018]. Sex mismatches and, more in general, misannotation of samples is a problem that has been previously demonstrated in other types of genomic studies [@turco2019].
+Heiss and Just 2018 used two bioinformatic approaches to determine whether samples measured on the Illumina 450k and EPIC DNAm microarrays are contaminated or misannotated.
+The first approach estimates the amount of mixing of distinct genotypes in a DNAm array sample, by measuring the amount of outlying signal at 59-65 SNP probes, which increases as mixing between genetically distinct individuals occur.
+The second approach identifies samples that have a pattern of signal intensity on the X and Y chromosome probes that is consistent with mixing of samples of different sex.
+This second approach is only sensitive to those cases where the sexes of the mixed samples are distinct.
+Despite most EWAS having some level of data quality control and sample preprocessing, Heiss and Just 2018 demonstrate that misannotation and sample contamination is relatively common in DNAm studies, but also importantly note that contamination is identifiable by their approaches and therefore addressable in downstream analysis.
 
 In placental research, where embryo-derived chorionic villi are normally sampled, there is an added challenge of avoiding contamination with maternal tissue as the placenta is directly attached to the maternal uterine wall and bathed in maternal blood [@konwar2018]. Because maternal cells from decidual tissue are distinct in both function and epigenetic profile than placental chorionic villi cells, contamination from maternal tissues can obscure measurements of DNAm and make interpretation difficult [@price2016]. Compounding this, certain placental-related conditions (e.g. involving placental inflammation) are associated with infiltration of maternal immune cells into the intervillous space and even the villi themselves (e.g. chorioamnionitis), making phenotype-associated DNAm profiles difficult to discern whether epigenetic reprogramming is occurring or if simply the underlying cell composition is changing [@wilson2018a]. Recently, maternal macrophages, although small in number, have been identified and characterized as a normal component of placental cell composition throughout gestation [@leavey2018]. Although it may be challenging to separate maternal from placental tissue during sample processing, knowing the degree of maternal cell contamination for each sample can potentially aid downstream analyses and may be relevant to the biological processes of interest. Despite this, the degree that maternal cell contamination influences placental studies has been minimally explored. Wan 2019 describe a set of quality control measures based on clustering patterns between control placental and maternal tissue samples, and PMDs, that were used to assess maternal contamination in placental DNAm data [@wan2019]. In particular, Wan 2019 emphasized that samples obtained from early termination pregnancies are especially at risk of contamination during sample processing. Maternal contamination is also relevant in cord blood studies where maternal blood contamination is at higher risk. Morin 2017 assessed maternal contamination in cord blood DNAm samples using tissue-specific approaches, such as using highly cord blood -specific sites to predict contaminated and non-contaminated samples [@morin2017].
 Interestingly, Morin 2017 explored using quality measurements (i.e. "no-calls") from genotyping data for samples that had also been measured on the Illumina PsychChip (genotyping array) to confirm contamination calls, but in contrast to Heiss 2018, found that the sensitivity of the genotyping data for genotype mixing was poor.
