--- a/Sections/11_Chapter_4.Rmd
+++ b/Sections/11_Chapter_4.Rmd
@@ -73,15 +73,37 @@ However, in 3 out of 13 datasets, samples that failed control checks showed stat
 However, we note that Illumina data quality control checks are fairly specific and each of 27 control checks measures a different aspect of DNAm signal quality; as others have also noted, even if samples fail some Illumina controls, other measures of DNAm data quality can appear fine [@heiss2018].
 However, samples that failed quality control only accounted for a proportion of samples with high P(outlier) values, leaving the possibility that genotype mixing could be occurring in the remainder of the samples.
 
-INSERT FIGURE 1
+<!-- INSERT FIGURE 1 -->
 
-INSERT TABLE 2
+(ref:ch4fig1cap) Estimated DNA contamination in placental DNAm data. Placental DNAm microarray (450k/850k Illumina) from 13 datasets was downloaded. Genotype contamination was estimated using a mixture model approach from ewastools R package. A) P(outlier), a measure of genotype mixing, estimated across all 13 placental datasets. B) Samples that failed 1 or more Illumina quality control checks tended to have higher P(outlier) values.
+
+```{r ch4fig1, eval = T, echo = T, echo=FALSE, fig.cap="(ref:ch4fig1cap)", fig.scap = "Estimated DNA contamination in placental DNAm data", fig.align='center',  out.extra=''}
+knitr::include_graphics(here::here('images', 'ch4', 'Figure 1.pdf'))
+```
+
+<!-- INSERT TABLE 2 -->
+
+\captionsetup{width=6.5in}
+
+```{r ch4tab2, eval = T, echo = T, echo=FALSE, warning = FALSE, message=FALSE,  out.extra=''}
+kableExtra::kbl(
+  readr::read_csv(here::here('Tables', 'ch4', 'table2.csv')),
+  booktabs = TRUE,
+  caption = 'Number of samples that failed 1 or more of 27 Illumina data quality control checks.')
+```
 
 To determine what proportion of high P(outlier) placental chorionic villi samples were contaminated with maternal cells, we performed several other analyses based on DNAm variation.
+
 Wan 2019 used a PCA based approach that identified a set of chorionic villi samples that clustered near maternal blood and decidua, indicating that contaminated placental samples show a globally altered methylation profile that was increasingly similar to the contaminating tissues [@wan2019] . In this study, we performed a modified version of PCA, where only highly tissue-specific (maternal blood vs villi, decidua vs villi) CpG sites were used. We found that PCA using the top 500 hypo- and hyper- methylated CpGs between villi and either maternal blood or decidua (2x tissues = 2000 CpGs total) resulted in the first principal component PC1 (94% variance explained) being able to separate placental and maternal samples (Figure 2A). We found this tissue-specific approach to be more sensitive than using PCA on all CpGs (Supplementary Figure 2A). We labelled placental chorionic villi samples based on how many standard deviations (SD) away from the chorionic villi mean on PC1, and towards decidua and maternal blood samples (Figure 2A, Table 1). We found that PC1 was positively associated (p\<0.001, reference category: "x \< mean") with high P(outlier) values (Figure 2B), indicating that more maternal tissue-like DNAm profiles in placental chorionic villi samples had correspondingly higher genotype mixing. Treating PC1 as a continuous variable, a linear model between P(outlier) versus PC1 was statistically significant (p\<0.001, slope = 3.26, Figure 2C). Interestingly, we observed a concave shape to the nonlinear fit using the "LOESS" regression option in ggplot2). This "increasing and then decreasing" relationship of P(outlier) is consistent with a model of genotype mixing, where after a sample becomes more than 50% contamination, the contaminant becomes the primary component of the sample and P(outlier) will start to decrease. More data is needed, however, as two extreme outliers drive the decreasing side of this relationship (Figure 2C). These two outlier samples belonged to dataset 11, and displayed a cell composition profile consistent with high blood contamination (increased nucleated red blood cells and Hofbauer cells, Figure 2D), which was estimated from DNAm-based placental cell deconvolution [@teschendorff2017; @yuan2021; @houseman2012].
 These findings support that tissue-specific clustering based on PCA can be a highly useful approach to identifying tissue-specific contamination.
 
-INSERT FIGURE 2
+<!-- INSERT FIGURE 2 -->
+
+(ref:ch4fig2cap) Maternal contamination alters DNAm profiles of placental samples. A) Principal component analysis (PCA) using 2000 tissue-specific CpG sites resulted in PC1 being able to discriminate between placental and maternal tissue samples. B) Categorization of placental samples based on PC1. Samples with higher PC1 values were associated with higher P(outlier) values. C) A positive statistically significant relationship between P(outlier) and PC1 was observed (p<0.001) using linear regression (green). A non-linear fit is shown in blue. Samples with high PC1 but low P(outlier) are shown in red. D) Cell composition of dataset 11, estimated from DNAm-based placental cell deconvolution. The two outlier samples (red) with high PC1 values are shown having a high immune cell profile. nRBC: nucleated red blood cells, sd: standard deviation, MBD: maternal blood decidua dataset. 
+
+```{r ch4fig2, eval = T, echo = T, echo=FALSE, fig.cap="(ref:ch4fig2cap)", fig.scap = "Maternal contamination alters DNAm profiles of placental samples", fig.align='center',  out.extra=''}
+knitr::include_graphics(here::here('images', 'ch4', 'Figure 2.pdf'))
+```
 
 We found that P(outlier) and tissue-specific PCA were effective in identifying samples containing maternal cell contamination.
 We additionally explored other DNAm based variables that might be suggestive of contamination, such as epigenetic age and XY signal intensity analysis.
@@ -92,7 +114,13 @@ However, there was a small, but statistically significant association between ad
 Placental epigenetic gestational age (EGA), which was highly accurate on chorionic villi samples (mean difference = +1.07 weeks, sd = 0.88), yielded estimates of EGA that was not as high as expected for decidua (mean = 43.0 weeks) and maternal blood (mean = 44.2 weeks) samples, which indicated EGA might have low sensitivity for maternal contamination (Supplementary Figure 3C).
 The difference between EGA and reported was not significantly associated with P(outlier) (Figure 3B, slope = -0.002, n.s.).
 
-INSERT FIGURE 3
+<!-- INSERT FIGURE 3 -->
+
+(ref:ch4fig3cap) Epigenetic age and XY signal intensity analysis. A) Adult epigenetic age on placental chorionic villi samples was associated with P(outlier) (p<0.01, slope = 0.013). B) The difference between placental epigenetic gestational age and reported gestational age was not significantly associated with P(outlier). C) Total XY signal intensity normalized to total autosomal signal intensity. Male samples (top left) deviations towards female samples (bottom right) are consistent with maternal contamination. D) Males flagged in XY intensity analysis have significantly (p<0.01) higher P(outlier) values than other placental villi samples. 
+
+```{r ch4fig3, eval = T, echo = T, echo=FALSE, fig.cap="(ref:ch4fig3cap)", fig.scap = "Epigenetic age and XY signal intensity analysis", fig.align='center',  out.extra=''}
+knitr::include_graphics(here::here('images', 'ch4', 'Figure 3.pdf'))
+```
 
 A common approach to check for sample misannotation in DNAm analysis is to compare samples' recorded sex and overall signal intensity from the X and Y chromosome probes.
 Additionally, samples that deviate from the male and female sample clusters can be indicative of sample-sample contamination when the contaminant is of different sex.
